	- Updated libgnome deps to 1.117.2
	- Updated gtkhtml2 deps to 1.99.8

	* src/yelp-reader.c: 
	- removed old code.
	- fixed a couple of warnings

	* stylesheets/yelp-customization.xsl: don't include section names
	  on toc and title-page.

	* src/yelp-view-content.c (yelp_view_content_show_uri): 
	- don't set "Loading..." if the doc is cached. It will only result
	  in flicker.

	* src/yelp-reader.c:
	(reader_man_info_start):
	- make sure that section is not an empty string.
	(yelp_reader_start): 
	- make sure that section is not an empty string.
	- return a boolean to say if the document was cached or not.
	
	* src/yelp-reader.c:
	(reader_get_chunk): added, used to get a chunk from a multi
	  chunked document.
	(reader_man_info_start): 
	- now handles docbook too. will be renamed later.
	- add docbook results in cache.
	- get chunk from document if docbook.
	(yelp_reader_start): 
	- check in cache if document is there, if so, just get the chunk 
	  and signal. 
	- if not in cache, use g_timeout_add instead of idle.

	* src/yelp-db2html.c: 
	- this is now it's own binary
	- use multichunk
	- don't use YelpURI so that we don't need to init gnome vfs

	* src/yelp-db2html.h: removed
	
	* src/yelp-cache.c: first dummy implementation of cache.

	* src/yelp-base.c (yelp_base_init): init the cache.

	* src/Makefile.am:
	(yelp_db2html_LDADD): added binary for db2html.
	(yelp_SOURCES): added yelp-cache.[ch] and removed 
	  yelp-db2html.[ch]

2002-05-26  Mikael Hallendal  <micke@codefactory.se>

	* stylesheets/yelp-customization.xsl: 
	- Don't include section name in end comment.
	- put [] around the section name in start tag.
	
2002-05-26  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: added "it" to ALL_LINGUAS

2002-05-23  Jacob Berkman  <jacob@ximian.com>

	* src/Makefile.am (yelp-marshal-main.c): add explicit dependency
	on yelp-marshal.c to make automake work

2002-05-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: